# last_letter_lib

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_catkin.txt  CMakeLists_standalone.txt  README.md  bitbucket-pipelines.yml  build.py  noxfile.py  package.xml  pyproject.toml  shell.nix
docs/: conf.py  developers.rst  index.rst  installation.rst  introduction.rst  notions.rst  reference.rst  usage.rst
include/: aerodynamics.hpp  dynamics.hpp  environment.hpp  gravity.hpp  kinematics.hpp  math_utils.hpp  prog_utils.hpp  ros_uav_utils.hpp  trimmer.hpp  uav_model.hpp  uav_utils.hpp
include/ground_reaction/: ground_reaction.hpp  no_ground_reactions.hpp  panos_contact_points.hpp  point_friction.hpp
include/last_letter_lib/: aerodynamics.hpp  dynamics.hpp  environment.hpp  geo_mag_declination.hpp  gravity.hpp  kinematics.hpp  link.hpp  log_types.hpp  logging.hpp  math_utils.hpp  prog_utils.hpp  sensors.hpp  systems.hpp  trimmer.hpp  uav_model.hpp  uav_utils.hpp
include/last_letter_lib/ground_reaction/: ground_reaction.hpp  no_ground_reactions.hpp  panos_contact_points.hpp  point_friction.hpp
include/last_letter_lib/propulsion/: beard_engine.hpp  electric_engine.hpp  no_engine.hpp  omega_control_engine.hpp  piston_engine.hpp  propulsion.hpp
include/propulsion/: beard_engine.hpp  electric_engine.hpp  no_engine.hpp  omega_control_engine.hpp  piston_engine.hpp  propulsion.hpp
last_letter_models/: HID.yaml  Sensors_parameters.yaml  environment.yaml  world.yaml
last_letter_models/aircraft/skywalker_2013/: aerodynamics.yaml  ground.yaml  init.yaml  propulsion.yaml  randomizer.yaml
last_letter_models/aircraft/skywalker_2013_mod/: aerodynamics.yaml  inertial.yaml  init.yaml  propulsion.yaml  randomizer.yaml
last_letter_models/skywalker_2013/: propulsion.yaml
models/: default.py  default_params.py  model_creator.py  skywalker.py  skywalker_2013.py
models/meshes/: fig.stl
models/skywalker_2013/: skywalker_2013.py
src/: aerodynamics.cpp  dynamics.cpp  environment.cpp  geo_mag_declination.cpp  gravity.cpp  kinematics.cpp  link.cpp  math_utils.cpp  prog_utils.cpp  python_api.cpp  ros_uav_utils.cpp  sensors.cpp  systems.cpp  trimmer.cpp  trimmer.py  uav_model.cpp  uav_utils.cpp
src/ground_reaction/: ground_reaction.cpp  no_ground_reactions.cpp  panos_contact_points.cpp  point_friction.cpp
src/last_letter_lib/: __init__.py  aerodynamics.py  default_params.py  environment.py  gravity.py  model_creator.py  propulsion.py  simulation.py  systems.py
src/last_letter_lib/utils/: log.py  math.py  plot.py  programming.py  uav.py
src/logging/: logging.cpp
src/propulsion/: beard_engine.cpp  electric_engine.cpp  no_engine.cpp  omega_control_engine.cpp  piston_engine.cpp  propulsion.cpp  thruster_simple.cpp
test/: run_all_tests.sh  test_aerodynamics.cpp  test_dynamics.cpp  test_environment.cpp  test_gravity.cpp  test_ground_reaction.cpp  test_kinematics.cpp  test_loop_rate.cpp  test_parameters.cpp  test_params.yaml  test_prog_utils.cpp  test_propulsion.cpp  test_rotations.cpp  test_trimmer.cpp  test_trimmer_input.cpp  test_trimmer_state.cpp  test_uav_model.cpp  test_yaml.cpp
test/parameters/: environment.yaml
test/parameters/skywalker_2013/: aerodynamics.yaml  ground.yaml  inertial.yaml  init.yaml  propulsion.yaml  randomizer.yaml
tests/cpp/: CMakeLists.txt  _test_loop_rate.cpp  _test_parameters.cpp  run_all_tests.sh  test_aerodynamics.cpp  test_dynamics.cpp  test_environment.cpp  test_gravity.cpp  test_ground_reaction.cpp  test_kinematics.cpp  test_loop_rate.cpp  test_math_utils.cpp  test_parameters.cpp  test_params.yaml  test_prog_utils.cpp  test_propulsion.cpp  test_pybind.cpp  test_rotations.cpp  test_systems.cpp  test_trimmer_input.cpp  test_trimmer_state.cpp  test_uav_model.cpp  test_uav_utils.cpp  test_utils.cpp  test_utils.hpp  test_yaml.cpp
tests/cpp/test_parameters/: environment.yaml  world.yaml
tests/cpp/test_parameters/skywalker_2013/: aerodynamics.yaml  dashboard.yaml  init.yaml  propulsion.yaml  randomizer.yaml
tests/python/: __init__.py  test_aerodynamics.py  test_environment.py  test_gravity.py  test_logging.py  test_math.py  test_propulsion.py  test_simulation.py  test_systems.py  test_uav.py
tools/: build_project.sh  cg_offset_error.py  docker_test_build.sh  install_common_dependencies.sh  install_cpp_dependencies.sh  install_project.sh  install_python_dependencies.sh  requirements.txt
