<?xml version="1.0"?>
<package format="2">
  <name>last_letter_lib</name>
  <version>0.1.0</version>
  <description>The last_letter library</description>

  <maintainer email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter</url>

  <author email="gzogop@mail.ntua.gr">George Zogopoulos-Papaliakos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!-- <build_depend>std_msgs</build_depend> -->
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <!-- <exec_depend>std_msgs</exec_depend> -->

</package>
