<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>last_letter_lib</name>
  <version>0.2.0</version>
  <description>The last_letter library</description>

  <maintainer email="tailwhipx4@gmail.com">George Zogopoulos-Papaliakos</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/Georacer/last_letter_lib</url>

  <author email="tailwhipx4@gmail.com">George Zogopoulos-Papaliakos</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gtest</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>libnlopt-cxx-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
