[project]
name = "last-letter-lib"
version = "2.1.0"
description = "Software libraries for UAV simulation"
readme = "README.md"
authors = [
    { name = "George Zogopoulos", email = "tailwhipx4@gmail.com" }
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "mcap>=1.2.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.2.0",
    "pybind11>=2.13.6",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/last_letter_lib"]

# The package build must produce the pybind11 extension; the CMake option that
# gates it defaults OFF (so a bare `cmake` build is C++-only), so turn it on here.
[tool.scikit-build.cmake.define]
LAST_LETTER_BUILD_PYTHON = "ON"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13.6"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
